# checker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  capitalizer.cpp  checker.cpp  echo.cpp  echo.py  starter.cpp
example/: CMakeLists.txt  addition-0.in  addition-14.in  addition-17.in  addition-18.in  addition-20.in  addition-21.in  addition-22.in  addition-23.in  addition-25.in  addition-28.in  addition-29.in  addition-32.in  addition-34.in  addition-36.in  addition-37.in  addition-38.in  addition-4.in  addition-40.in  addition-42.in  addition-44.in  addition-45.in  addition-46.in  addition-47.in  addition-48.in  addition-50.in  addition-52.in  addition-53.in  addition-54.in  addition-55.in  addition-56.in  addition-58.in  addition-59.in  addition-60.in  addition-61.in  addition-62.in  addition-65.in  addition-66.in  addition-67.in  addition-70.in  (+18 more)
example/test_examples/: addition-10.in  addition-12.in  addition-13.in  addition-15.in  addition-16.in  addition-2.in  addition-24.in  addition-26.in  addition-27.in  addition-31.in  addition-33.in  addition-35.in  addition-41.in  addition-43.in  addition-49.in  addition-5.in  addition-51.in  addition-57.in  addition-6.in  addition-63.in  addition-64.in  addition-69.in  addition-7.in  addition-71.in  addition-72.in  addition-75.in  addition-78.in  addition-8.in  addition-82.in  addition-84.in  addition-9.in  (+6 more)
executor/: CMakeLists.txt
explore/: capital.cpp  starter.cpp
include/: kexec.h  types.h
kexec/: CMakeLists.txt
kexec/include/: types.h
kexec/src/: kexec.cpp  types.cpp
src/: kexec.cpp  types.cpp
